# over

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  actor.cpp  actor.hpp  build_and_run.cmd  build_and_run.sh  camera.hpp  debug_system.cpp  debug_system.hpp  fragment.shader  main.cpp  shader.cpp  shader.hpp  system.hpp  vcpkg.json  vertex.shader
atmosphere/: CMakeLists.txt
atmosphere/src/over/atmosphere/: Main.cppm
atmosphere/src/over/atmosphere/app/: App.cppm
atmosphere/src/over/atmosphere/shapes/: Sphere.cppm
atmosphere/src/shaders/: Planet.frag  Planet.vert
basics/: CMakeLists.txt  main.cpp
basics/shaders/: vertex.shader
cmake/: InitSubmodules.cmake  SetupAssimp.cmake  SetupFMT.cmake  SetupGLFW.cmake  SetupGLM.cmake  SetupGlad.cmake  SetupImGui.cmake  SetupSTB.cmake
cmake/utils/: ConfigureResources.cmake  ConfigureShaders.cmake  ConfigureSources.cmake
core/: CMakeLists.txt  camera.cpp  camera.hpp  shader.cpp  shader.hpp
core/include/over/core/: Camera.hpp  Context.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Transform.hpp  Types.hpp
core/include/over/core/host/images/: Image2D.hpp
core/include/over/core/opengl/: Address.hpp  Binded.hpp  Framebuffer.hpp  IBO.hpp  RenderBuffer.hpp  Texture.hpp  Texture2D.hpp  VAO.hpp  VBO.hpp
core/include/over/core/opengl/allocators/: DefaultBufferAllocator.hpp  DefaultFrameBufferAllocator.hpp  DefaultLayoutAllocator.hpp  DefaultRenderBufferAllocator.hpp  DefaultTextureAllocator.hpp
core/include/over/core/opengl/buffers/: Buffer.hpp
core/include/over/core/opengl/targets/: BufferTarget.hpp  FrameBufferTarget.hpp  LayoutTarget.hpp  RenderBufferTarget.hpp  TextureTarget.hpp
core/include/over/core/opengl/views/: BufferView.hpp  FrameBufferView.hpp  LayoutView.hpp  RenderBufferView.hpp  TextureView.hpp
core/include/over/core/opengl/wrappers/: BufferWrapper.hpp  Exception.hpp  FrameBufferWrapper.hpp  LayoutWrapper.hpp  RenderBufferWrapper.hpp  TextureWrapper.hpp  Wrapper.hpp
core/include/over/core/window/: Context.hpp  Window.hpp
core/include/over/utils/: Interval.hpp
core/src/over/core/: Camera.cpp  Context.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Transform.cpp
core/src/over/core/host/images/: Image2D.cpp
core/src/over/core/opengl/: Framebuffer.cpp  IBO.cpp  RenderBuffer.cpp  Texture.cpp  Texture2D.cpp  VAO.cpp  VBO.cpp
core/src/over/core/opengl/allocators/: DefaultBufferAllocator.cpp  DefaultFrameBufferAllocator.cpp  DefaultLayoutAllocator.cpp  DefaultRenderBufferAllocator.cpp  DefaultTextureAllocator.cpp
core/src/over/core/window/: Context.cpp  Window.cpp
engine/: CMakeLists.txt
engine/include/over/engine/: App.hpp  Core.hpp  Input.hpp
engine/src/over/engine/: App.cpp  Input.cpp
features/: CMakeLists.txt
features/src/over/: Main.cpp
features/src/shaders/: DimensionFragment.shader  DimensionGeometry.shader  DimensionVertex.shader  DimentionFragment.shader  MainFragment.shader  MainVertex.shader  NormalDebugFragment.shader  NormalDebugGeometry.shader  NormalDebugVertex.shader  ScreenFragment.shader  ScreenVertex.shader  SkyboxFragment.shader  SkyboxVertex.shader
fitures/: CMakeLists.txt
fitures/src/over/: Main.cpp
fractal/: CMakeLists.txt  README.md  main.cpp
fractal/shaders/: fragment.shader  vertex.shader
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h  glad.h
libs/glad/src/: glad.c
lighting/: CMakeLists.txt  README.md  main.cpp  mesh.cpp  mesh.hpp
lighting/shaders/: fragment.shader  lightFragment.shader  lightVertex.shader  vertex.shader
lighting/src/over/: main.cpp
lighting/src/over/examples/lighting/: mesh.cpp  mesh.hpp
models/: CMakeLists.txt  README.md
models/shaders/: fragment.shader  stencil_fragment.shader  stencil_vertex.shader  vertex.shader
models/src/: main.cpp  mmesh.cpp  mmesh.hpp  mmodel.cpp  mmodel.hpp
models/src/over/: main.cpp
models/src/over/examples/models/: mmesh.cpp  mmesh.hpp  mmodel.cpp  mmodel.hpp
morphing/: CMakeLists.txt
morphing/resources/cube/: cube.blend  cube.glb
morphing/shaders/: fragment.shader  vertex.shader
morphing/src/over/: Main.cpp
morphing/src/over/examples/morphing/: App.cpp  App.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp  SpotLight.cpp  SpotLight.hpp
